--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@open-wc/testing": "^4.0.0",
+		"lit-html": "^3.1.0",
 		"react": "^18.2.0",
 		"react-date-range": "^1.4.0",
 		"react-datepicker": "^4.24.0",
