--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@open-wc/testing": "^4.0.0",
+		"axios": "^1.6.2",
 		"lit-html": "^3.1.0",
 		"react": "^18.2.0",
 		"react-date-range": "^1.4.0",
@@ -36,6 +37,7 @@
 		"@types/react-dom": "^18.2.7",
 		"@vitejs/plugin-react": "^4.2.1",
 		"@vitejs/plugin-react-swc": "^3.3.2",
+		"axios-mock-adapter": "^1.22.0",
 		"babel-jest": "^29.7.0",
 		"eslint": "^8.45.0",
 		"eslint-plugin-react": "^7.32.2",
