--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@open-wc/testing": "^4.0.0",
 		"axios": "^1.6.2",
+		"jwt-decode": "^4.0.0",
 		"lit-html": "^3.1.0",
 		"react": "^18.2.0",
 		"react-date-range": "^1.4.0",
